--- a/README
+++ b/README
@@ -13,17 +13,17 @@ you can enter ./motdServer which will start the server. The logs are sent to sys
 
 This is a sample of the logs.
 
-May 10 23:04:05 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: Program started by User 1000
-May 10 23:04:10 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: 2 bytes received
-May 10 23:04:10 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: IP address: 127.0.0.1:42584 performed read action message is: htest
-May 10 23:04:19 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: 2 bytes received
-May 10 23:04:19 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: IP address: 127.0.0.1:42586 performed write action message is:
-May 10 23:04:27 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: 5 bytes received
-May 10 23:04:27 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: Updating new motd to god
-May 10 23:04:27 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: IP address: 127.0.0.1:42588 performed write action message is: god
-May 10 23:04:36 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: 2 bytes received
-May 10 23:04:36 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: IP address: 127.0.0.1:42590 performed action: g command not recognised
-May 10 23:06:40 jcordell-Lenovo-YOGA-700-14ISK MOTD[19688]: IP address: 127.0.0.1:42596 performed action: k
+May 10 23:04:05 jcordell-MOTD[19688]: Program started by User 1000
+May 10 23:04:10 jcordell-MOTD[19688]: 2 bytes received
+May 10 23:04:10 jcordell-Lenovo- MOTD[19688]: IP address: 127.0.0.1:42584 performed read action message is: htest
+May 10 23:04:19 jcordell-Lenovo- MOTD[19688]: 2 bytes received
+May 10 23:04:19 jcordell-Lenovo- MOTD[19688]: IP address: 127.0.0.1:42586 performed write action message is:
+May 10 23:04:27 jcordell-Lenovo- MOTD[19688]: 5 bytes received
+May 10 23:04:27 jcordell-Lenovo- MOTD[19688]: Updating new motd to god
+May 10 23:04:27 jcordell-Lenovo- MOTD[19688]: IP address: 127.0.0.1:42588 performed write action message is: god
+May 10 23:04:36 jcordell-Lenovo- MOTD[19688]: 2 bytes received
+May 10 23:04:36 jcordell-Lenovo- MOTD[19688]: IP address: 127.0.0.1:42590 performed action: g command not recognised
+May 10 23:06:40 jcordell-Lenovo- MOTD[19688]: IP address: 127.0.0.1:42596 performed action: k
 
 Then start the client 
 
